# fastapi-starter

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  run.sh
nginx/: api_gateway.conf  nginx.conf  nginx.dev.conf
nginx/certs/: server.crt  server.key
prometheus/: prometheus.yml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 7cb1a0055325_create_users_tables.py
src/api/: dependencies.py  main.py  middleware.py
src/api/routers/: auth.py  file.py  health_check.py  item.py  task.py  user.py
src/core/: config.py  database.py  exceptions.py  security.py
src/migrations/: env.py
src/migrations/versions/: 564ba86e01da_create_items_table.py
src/models/: __init__.py  base.py  file.py  item.py  user.py
src/repositories/: __init__.py  item.py  user.py
src/scripts/: seed.py
src/services/: __init__.py  auth.py  item.py  storage.py  user.py
src/tasks/: __init__.py  basic.py  email.py  main.py
src/utils/: database.py  mailer.py
