[project]
name = "fastapi-starter"
version = "0.1.0"
description = "A starter template for FastAPI projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.14.1",
    "boto3>=1.36.26",
    "celery[redis]>=5.4.0",
    "fastapi[standard]>=0.115.8",
    "flower>=2.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "sqlmodel",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
]
